footers form is 'nowrap'

--- a/css/style.css
+++ b/css/style.css
@@ -117,16 +117,17 @@ a:hover {
 }
 .footer__form {
 	height: 52px;
+	padding-right: 30px; 
 }
 .footer__form > label {
 	border-color:  #323334;
-	border-radius: 26px 0 0 26px;
+	border-radius: 26px ;
 	background-color: #323334;
 	color: #5e5e5e;
 	height: 52px;
-	max-width: 415px;
+	width: 415px;
 	padding-left: 20px;
-	padding-right: 150px;
+	margin-right: -52px;
 }
 .footer__form > label >input {
 	font-size: 13px;
@@ -140,7 +141,7 @@ a:hover {
 	height: 52px;
 	z-index: 25;
 	left: -26px;
-	position: relative;
+
 }
 
 .footer__headline {
