--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+@font-face {
+			font-family: "MyriadProRegular";
+			src: url("../fonts/MyriadProRegular.ttf") format("truetype");
+			font-style: normal;
+			font-weight: normal;
+	}
+@font-face {
+			font-family: "MyriadProBold";
+			src: url("../fonts/MyriadPro-Bold.ttf") format("truetype");		
+	}
+@font-face {
+  	font-family: "Montserrat-Bold";
+  	src: url("../fonts/Montserrat-Bold.otf") format("opentype"),
+  	url("../fonts/Montserrat-Bold.ttf") format("truetype");
+  	font-weight: 600;
+}
+@font-face {
+	font-family: "MontserratRegular";
+	src: url("../fonts/MontserratRegular.otf") format("opentype"),
+  		url("../fonts/MontserratRegular.ttf") format("truetype");
+  	font-weight: normal;
+}
 a:hover {
 	text-decoration:none;
 }
@@ -15,68 +37,112 @@ a:hover {
 	text-decoration: none;
 	line-height:40px;
 }
+.navigation {
+	background-color: white; 
+	z-index: 2;
+	position: relative;
+}
 .navbar {
 	height:100px;
-	margin-bottom:0px;
-	z-index: 1;
+	margin-bottom:-90px;
 }
-
+/*.navbar#navbarMenu.navbar-nav.active.nav-link {
+	color: #ffac56;
+	border-color: #ffac56;
+}*/
 .logo {
    	width: 149px;
  	height: 42px;
 }
 .banner {
 	position: relative;
-  
+	overflow: hidden;
+	height: 702px;
 }
 .prev, .next {
   background-color: rgb(38, 40, 41);
   width: 46px;
   height: 106px;
+  position: relative;
+  top: -15%;
 }
 .section {
 	padding: 95px 0;
 }
 
-.wrapper-choose {
+.card {
+	border-width: 0;
+	border-radius: 0;
 	position: absolute;
-	left: 415px;
-  	top: 175px;
+	left: calc(100vw * 415 / 1970);
+  	top: calc(100vw * 175 / 1970);;
  	width: 458px;
+ 	background-color: transparent;
+ 	color: #ffffff;
+ 	font-family:MontserratRegular;	
 }
-.choose {
-  background-color: rgb(255, 172, 86);
- 
- 
-  height: 117px;
-  z-index: 253;
+.card-header {
+  	background-color: rgb(255, 172, 86);
+ 	border-radius: 0;
+ 	border-width: 0;
+  	height: 117px;
 }
-.blue-box {
+.card h5 {
+	font-size: 14px;
+	line-height: 2;
+}
+.card-title {
+	font-size: 28px;
+	font-weight: 100;
+}
+.card-body {
 	background-color: #03b6e7;
-	  
-	  
 	height: 408px;
-	z-index: 257; 
  }
- .about-us {
+.card__item {
+	height: 130px;
+}
+.card__item > div {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.btn {
+ 	color: white;
+ 	background-color: #16d428;
+ 	font-size: 13px;
+ 	font-weight: bold;
+ }
+.card__item .btn {
+ 	width: 148px;
+	height: 52px;
+	border-radius: 26px;
+	line-height: 30px;
+}
+.card__item:hover {
+	background-color: #00a6d3;
+}
+.about-us {
  	text-align: right;
  	
  }
  .domine {
  	font-family: Domine;
- }
- .headline {
- 	text-transform: uppercase;
+ 	font-size: 15px;
  }
 
- .btn {
- 	color: white;
- 	background-color: #16d428;
- 	font-size: 13px;
- 	text-transform: uppercase;
- 	height: 38px;
- 	border-radius: 22px;
+ .headline {
+ 	font-family: MontserratRegular, sans-serif;
+ 	font-size: 32px;
+ 	color: #343a3b;
+ 	line-height: 33px;
  }
+.headline small {
+	color: #343a3b;
+	font-size: 18px;
+	line-height: 33px;
+}
+ 
  .read-more {
  	width: 133px;
  	
@@ -98,11 +164,41 @@ a:hover {
 .steps {
 	background-color: #e7eff1;
 }
-.testimomials {
+
+.testimonials {
 	background-color: #03b6e7;
+	color: #ddf8ff;
+	line-height: 28px;
+}
+.testimonials .headline small {
+	color: #a6ecff;
+	font-size: 14px;
+}
+.testimonials .headline {
+	color: #ffffff;
+	margin-bottom: 55px;
 }
 .blog {
 	background-color: #e7eff1;
+}
+.blog a:link {
+	font-size: 12px;
+	color: #606668 !important;
+	line-height: 32px;
+	height: 32px;
+	width: 140px;
+	border-radius: 16px;
+	margin-right: 10px;
+	border: 2px solid #989fa0;
+}
+.blog a:first-of-type {
+	border: 2px solid #ffac56;
+}
+.blog a:last-of-type {
+	border: 2px solid #989fa0;
+}
+.blog .section div:nth-child(2) > p > span {
+	color: #16d428;
 }
 .footer {
 	background-color: #262829;
