--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 @font-face {
 			font-family: "MyriadProRegular";
 			src: url("../fonts/MyriadProRegular.ttf") format("truetype");
-			font-style: normal;
-			font-weight: normal;
 	}
 @font-face {
 			font-family: "MyriadProBold";
@@ -20,6 +18,10 @@
   		url("../fonts/MontserratRegular.ttf") format("truetype");
   	font-weight: normal;
 }
+@font-face {
+			font-family: "domine";
+			src: url("../fonts/Domine-Regular.ttf") format("truetype");
+	}
 a:hover {
 	text-decoration:none;
 }
@@ -122,35 +124,39 @@ a:hover {
 .card__item:hover {
 	background-color: #00a6d3;
 }
-.about-us {
- 	text-align: right;
- 	
- }
  .domine {
  	font-family: Domine;
- 	font-size: 15px;
  }
-
+.about_us .domine {
+	font-size: 15px;
+	line-height: 28px;
+}
  .headline {
- 	font-family: MontserratRegular, sans-serif;
+ 	font-family: Montserrat-Bold;
  	font-size: 32px;
  	color: #343a3b;
  	line-height: 33px;
+ 	letter-spacing: calc(35px * (-50) / 1000);
+ 	margin-bottom: 38px;
  }
 .headline small {
-	color: #343a3b;
-	font-size: 18px;
+	font-family: MontserratRegular;
+	color: #898e8f;
+	font-size: 14px;
 	line-height: 33px;
+	letter-spacing: calc(14px * (-50) / 1000);
 }
  
- .read-more {
+ .about_us .btn {
  	width: 133px;
- 	
+ 	height: 44px;
+ 	border-radius: 22px;
+ 	margin-top: 48px;
  }
- .wrapper-badge {
+ .badge {
  	position: relative;
  }
-.badge {
+.medal {
 	width: 237px;
 	height: 280px;
 	box-sizing: border-box;
@@ -160,6 +166,36 @@ a:hover {
 	position: absolute;
 	left:110px;
 	top: 162px;
+	color: #ffffff;
+	font-family: "MontserratRegular";
+	overflow: hidden;
+}
+.medal img {
+	margin-top: -5px;
+}
+.medal h5 {
+	font-size: 75px;
+	 line-height: 0.25; 
+}
+.medal p {
+	font-size: 10px;
+	line-height: 40px;
+	letter-spacing: calc(10px * 75 / 1000);
+
+}
+.medal div {
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+	position: absolute;
+	border: 17px solid  #03b6e7;
+}
+.medal div > div {
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+	position: absolute;
+	border: 1px solid  #35c5ec;
 }
 .steps {
 	background-color: #e7eff1;
