--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,63 @@ a:hover {
 	color: #ffffff;
 	margin-bottom: 55px;
 }
+.slider {
+  overflow: hidden;
+  position: relative;
+  padding-top: 120px;
+  height: auto;
+  margin-bottom: 50px;
+}
+.slider__item {
+  position: absolute;
+  left: 0;
+  top: 0px;
+  opacity: 0;
+  transform: translateX(100%);
+  transition: transform 0.5s linear;
+}
+.slider label {
+  opacity: 0.5;
+  cursor: pointer;
+  position: relative;
+  width: 70px;
+  height: 70px;
+  border:1px solid #03b6e7;
+  border-radius: 50%;
+  transition: opacity ease-in-out .2s;
+ }
+
+.slider label:hover, 
+.slider #slide1:checked ~ div > label,
+.slider #slide2:checked ~ div > label,
+.slider #slide3:checked ~ div > label {
+  opacity: 1;
+}
+.slider input:checked ~ .slider__item {
+  display: block;
+  opacity: 1;
+  z-index: 1;
+ transform: none;
+}
+.slider h3 {
+  font-size: 14px;
+  font-family: Montserrat-Bold;
+}
+.slider .slider__controls {
+  padding-top: 50px;
+}
+.slider .controls .controls__item {
+  width: 15px;
+  height: 15px;
+  border: 3px solid white;
+  border-radius: 50%;
+}
+.slider {
+  font-size: 15px;
+  color: rgb(221, 248, 255);
+  line-height: 28px;
+}
+
 .blog {
 	background-color: #e7eff1;
 }
@@ -238,7 +295,6 @@ a:hover {
 }
 .footer {
 	background-color: #262829;
-
 }
 
 .footer__text {
