--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
 @font-face {
-			font-family: "MyriadProRegular";
-			src: url("../fonts/MyriadProRegular.ttf") format("truetype");
-	}
-@font-face {
-			font-family: "MyriadProBold";
-			src: url("../fonts/MyriadPro-Bold.ttf") format("truetype");		
-	}
-@font-face {
   	font-family: "Montserrat-Bold";
   	src: url("../fonts/Montserrat-Bold.otf") format("opentype"),
   	url("../fonts/Montserrat-Bold.ttf") format("truetype");
@@ -23,14 +15,6 @@
 			src: url("../fonts/Domine-Regular.ttf") format("truetype");
 	}
 
-@media screen and (max-width: 661px) {
- 
-  .projects__img {
-    object-fit: cover;
-    width: 100%;
-  }
-
-}
 
 a:hover {
 	text-decoration:none;
@@ -49,7 +33,7 @@ a:hover {
 	text-decoration: none;
 	line-height:40px;
 }
-.navigation {
+.navig {
 	background-color: white; 
 	z-index: 2;
 	position: relative;
@@ -58,10 +42,10 @@ a:hover {
 	height:100px;
 	margin-bottom:-90px;
 }
-/*.navbar#navbarMenu.navbar-nav.active.nav-link {
-	color: #ffac56;
+.navig .active {
+	color: #ffac56 !important;
 	border-color: #ffac56;
-}*/
+}
 .logo {
    	width: 149px;
  	height: 42px;
@@ -87,7 +71,7 @@ a:hover {
 	border-radius: 0;
 	position: absolute;
 	left: calc(100vw * 415 / 1970);
-  	top: calc(100vw * 175 / 1970);;
+  top: calc(100vw * 175 / 1970);;
  	width: 458px;
  	background-color: transparent;
  	color: #ffffff;
@@ -112,7 +96,7 @@ a:hover {
 	height: 408px;
  }
 .card__item {
-	height: 130px;
+	min-height: 130px;
 }
 .card__item > div {
 	position: relative;
@@ -123,13 +107,14 @@ a:hover {
  	color: white;
  	background-color: #16d428;
  	font-size: 13px;
- 	font-weight: bold;
+ 	font-family: MontserratRegular;
+  line-height: 30px;
+  letter-spacing: calc(13px * (-10) / 1000);
  }
 .card__item .btn {
  	width: 148px;
 	height: 52px;
 	border-radius: 26px;
-	line-height: 30px;
 }
 .card__item:hover {
 	background-color: #00a6d3;
@@ -144,9 +129,8 @@ a:hover {
  .headline {
  	font-family: Montserrat-Bold;
  	font-size: 32px;
- 	color: #343a3b;
  	line-height: 33px;
- 	letter-spacing: calc(33px * (-50) / 1000);
+ 	letter-spacing: calc(32px * (-50) / 1000);
  	margin-bottom: 38px;
  }
 .headline > small {
@@ -229,21 +213,24 @@ a:hover {
   color: #838b8c;
 }
 .projects__img {
-  object-fit: contain;
+  object-fit: cover;
+  height:auto;
   width: 100%;
   object-position: 0% 100%;
 }
 .projects__img_1 {
-  object-fit: fill;
+  object-fit: cover;
+  max-height: 464px;
   height: 100%;
-   object-position: 0% 100%;
+  object-position: 0% 100%;
 }
 .projects__img_row1 {
   max-height: 212px;
+  margin-bottom: 30px;
 }
 .projects__img_row2 {
   max-height: 222px;
-  
+  margin-bottom: 30px;
 }
 .projects__marker {
   box-sizing: border-box;
@@ -273,15 +260,40 @@ a:hover {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: transparent;
-  transition: background-color 0.3 linear;
+  background-color: #ffac56;
+  color: #ffffff;
+  opacity: 0;
+  transition: opacity 0.3 linear;
 }
 .projects__active:hover {
-   background-color: #ffac56;
+   opacity: 0.95;
 }
-.projects__img_row2 div.position-relative {
-  box-sizing: content-box !important;
-  width: auto;
+.projects__active > div > p {
+  font-size: 18px;
+  letter-spacing: calc(18px * (-25) / 1000);
+  margin-bottom: 0;
+}
+.projects__active > div > p:last-child {
+  font-size: 15px;
+  line-height: 22px;
+}
+.img__text {
+  left: 20px;
+  top: 20px;
+  width: 110px;
+  height: 33px;
+  border: 2px solid #ffac56;
+  border-radius: 16.5px;
+  color: #ffffff;
+  font-family: MontserratRegular;
+  font-size: 12px;
+  line-height: 33px;
+  letter-spacing: calc(12px * (-50) / 1000);
+}
+.projects__btn {
+  width: 162px;
+  height: 43px;
+  border-radius: 21.5px;
 }
 .testimonials {
 	background-color: #03b6e7;
@@ -354,7 +366,9 @@ a:hover {
   font-size: 15px;
   color: #ddf8ff;
 }
-
+.slider div #slide1:checked > div.slider__controls label {
+  background-color: #16d428;
+}
 .blog {
 	background-color: #e7eff1;
   overflow: hidden;
@@ -425,6 +439,7 @@ div.contact:nth-child(2) {
 }
 
 .footer__text {
+  font-family: Domine;
 	font-size: 15px;
 	line-height: 24px;
 	color: #838b8c;
@@ -449,14 +464,17 @@ div.contact:nth-child(2) {
 	border-radius: 19px;
 	border-color: #323334
 }
-.footer_btn {
+.footer__btn {
 	border-radius: 26px;
 	width: 154px;
 	height: 52px;
 	z-index: 25;
 	left: -26px;
 }
-
+.footer .w-100 {
+  background-color: #323334; 
+  height: 2px;
+}
 .footer__headline {
 	color: #e1e1e1;
 	font-size: 20px;
@@ -466,6 +484,18 @@ div.contact:nth-child(2) {
   font-size: 13px;
   font-family:  "MontserratRegular";
   line-height: 30px;
+}
+
+@media (max-width: 767px) {
+  div#industry.card  {
+    position: relative;
+    left: 0;
+    width: 90%;
+    margin: 110px auto 0;
+  }
+  .section {
+  padding: 50px 0;
+  }
 }
 
 
