--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@
 	}
 
 
-a:hover {
+a:hover,
+.btn:hover {
 	text-decoration:none;
   color: #ffffff;
   font-weight: 900;
@@ -168,8 +169,7 @@ a:hover {
 	line-height: 33px;
 	letter-spacing: calc(14px * (-50) / 1000);
 }
- 
- .about_us .btn {
+.about_us .btn {
  	width: 133px;
  	height: 44px;
  	border-radius: 22px;
@@ -186,7 +186,7 @@ a:hover {
 	border-radius: 0;
 	background-color: #03b6e7;
 	position: absolute;
-	left:110px;
+	left: 25%;
 	top: 162px;
 	color: #ffffff;
 	font-family: "MontserratRegular";
@@ -451,7 +451,7 @@ a:hover {
 }
 
 .contact {
-  height: 130px;
+  min-height: 130px;
   width: 33.3%;
 }
 .contact > div {
@@ -462,6 +462,7 @@ a:hover {
   font-size: 18px;
   font-family: "Domine";
   color: #343a3b;
+  margin-bottom: 0;
 }
 div.contact:nth-child(2) {
   margin: 0 auto;
@@ -482,23 +483,29 @@ div.contact:nth-child(2) {
 }
 .footer__form {
 	height: 52px;
-	padding-right: 30px; 
+  border-radius: 26px ;
+  background-color: #323334;
+  border-color:  #323334;
 }
-.footer__form > label {
-	border-color:  #323334;
-	border-radius: 26px ;
-	background-color: #323334;
-	color: #5e5e5e;
-	height: 52px;
-	width: 415px;
-	padding-left: 20px;
-	margin-right: -52px;
-}
-.footer__form > label >input {
+.footer__form >input {
+  padding-left: 20px;
+  height: 100%;
 	font-size: 13px;
+  padding-right: 100px;
 	background-color: #323334;
-	border-radius: 19px;
-	border-color: #323334
+	border-radius: 26px;
+	border-color: #323334;
+  color: #5e5e5e;
+  min-width: 315px;
+  margin-right: -52px;
+  outline: none!important;
+  -webkit-appearance: none;
+}
+.footer__form >input:focus {
+  background-color: #323334;
+  border-color: #323334;
+  outline: none!important;
+  box-shadow: inset 0 0 2px 2px #5e5e5e!important;
 }
 .footer__btn {
 	border-radius: 26px;
@@ -506,6 +513,10 @@ div.contact:nth-child(2) {
 	height: 52px;
 	z-index: 25;
 	left: -26px;
+  margin: 0;
+}
+.footer__btn:focus {
+  box-shadow: inset 0 0 2px 2px #5e5e5e!important;
 }
 .footer .w-100 {
   background-color: #323334; 
